--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "hedge-zeppelin-js",
+  "homepage": ".",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -36,6 +37,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "homepage": "https://autotestguru.github.io"
+  }
 }
